# simpleocv

./: .gitignore  CMakeLists.txt  build.sh  readme.md
examples/: CMakeLists.txt  demo_color.cc
include/: allocator.h  simpleocv.h
src/: allocator.cc  allocator.h  cpu.cpp  cpu.h  mat.cpp  mat.h  mat_pixel.cpp  mat_pixel_affine.cpp  mat_pixel_android.cpp  mat_pixel_drawing.cpp  mat_pixel_reisze_flycv.cpp  mat_pixel_resize.cpp  mat_pixel_rotate.cpp  platform.h  simpleocv.cpp
